WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
220646
Playback fails at market watch.com
https://bugs.webkit.org/show_bug.cgi?id=220646
Summary
Playback fails at market watch.com
Jer Noble
Reported
2021-01-14 22:15:41 PST
Playback fails at marketplace.com
Attachments
Patch
(7.23 KB, patch)
2021-01-14 22:22 PST
,
Jer Noble
calvaris
: review+
calvaris
: commit-queue-
Details
Formatted Diff
Diff
Patch for landing
(7.30 KB, patch)
2021-01-15 09:32 PST
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Patch for landing
(7.32 KB, patch)
2021-01-15 09:47 PST
,
Jer Noble
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2021-01-14 22:16:22 PST
<
rdar://72950166
>
Jer Noble
Comment 2
2021-01-14 22:22:13 PST
Created
attachment 417676
[details]
Patch
Xabier Rodríguez Calvar
Comment 3
2021-01-15 00:42:24 PST
Comment on
attachment 417676
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=417676&action=review
> Source/WebCore/ChangeLog:9 > + When audio playback is blocked by settings, the HTMLMediaElement must load it's source
its
Jer Noble
Comment 4
2021-01-15 09:32:23 PST
Created
attachment 417710
[details]
Patch for landing
Jer Noble
Comment 5
2021-01-15 09:47:45 PST
Created
attachment 417712
[details]
Patch for landing
EWS
Comment 6
2021-01-15 12:40:10 PST
Xabier Rodriguez Calvar found in /Volumes/Data/worker/Commit-Queue/build/LayoutTests/ChangeLog does not appear to be a valid reviewer according to contributors.json. /Volumes/Data/worker/Commit-Queue/build/LayoutTests/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive).
Jer Noble
Comment 7
2021-01-15 12:54:07 PST
Committed
r271531
: <
https://trac.webkit.org/changeset/271531
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug